TODO
====

Add support for StellarNet spectrometers and Bentham spectrometers.
Add a generic reader of files into a collection of spectra.
Add alternative reader of TUV output files into a collection of spectra.
Add support for libRadTran output files.

photobiologyInOut 0.4.4
=======================

Add 'readr::locale' support to all functions that could make use of it.
Add 'label' parameter to all file import functions.
Add function read_oo_ssdata() for reading SpectraSuite files containing raw counts.
Add function read_libradtran_vesa() for reading libRadtran output file with 
multiple solar spectrum simulations (as preprocessed by Vesa's script).
Add metadata as consistently as possible to the objects returned by all the 
file import functions.
Update dependencies.
Edit the user Guide.

photobiologyInOut 0.4.3
=======================

Update for compatibility with 'lubridate' (>= 1.5.6)
Add function read_oo_jazdata() to read Jaz files containing raw counts.
Add preliminary versions of functions to exchange data with package 'hyperSpec':
mspct2hyperSpec() and hyperSpec2mspct().
Add preliminary version of function to import data from package 'pavo':
rspec2mspct().

photobiologyInOut Ver 0.4.2
===========================

Fix bug in read_fmi_cum(). Update dependencies.

photobiologyInOut Ver 0.4.1
===========================

Update vignette. Fix docs.

photobiologyInOut Ver 0.4.0
===========================

This is a major update, not backwards compatible, as names and formal 
parameters of all functions have changed. Trimming is no longer supported
(should be done as a separate operation).

The functions for Ocean Optics files now read the number of pixels from the
file header, and hopefully will better adjust to different instruments and 
settings.

Functions for reading multiple spectra now return collections of spectra.
(Functions that saved the spectral objects constructed from the data read 