@@ -2,7 +2,7 @@ Package: photobiologyInOut
 Type: Package
 Title: Read Spectral Data from Foreign Files
 Version: 0.4.4
-Date: 2016-05-21
+Date: 2016-05-22
 Author: Pedro J. Aphalo <pedro.aphalo@helsinki.fi>
 Maintainer: Pedro J. Aphalo <pedro.aphalo@helsinki.fi>
 Description: Functions for reading and writing foreign files containing
