@@ -35,7 +35,7 @@ read_licor_prn <- function(file,
                            date = NULL,
                            geocode = NULL,
                            label = NULL,
-                           tz = Sys.timezone(),
+                           tz = NULL,
                            locale = readr::default_locale()) {
   if (is.null(tz)) {
     tz <- locale$tz
